--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h1>App works!</h1>
-<router-outlet></router-outlet>
+<div class="app-container">
+  <div class="app-nav">
+    <app-navigation></app-navigation>
+  </div>
+  <div class="app-component">
+    <router-outlet></router-outlet>
+  </div>
+</div>
