feat: create event component

--- a/client/src/app/events/events.component.html
+++ b/client/src/app/events/events.component.html
@@ -1,1 +1,3 @@
-<p>events works!</p>
+<div fxLayout="row" fxLayoutAlign="space-around start">
+  <app-event *ngFor="let event of events" class="app-event"></app-event>
+</div>
