--- a/client/src/app/event/event.component.html
+++ b/client/src/app/event/event.component.html
@@ -1,1 +1,10 @@
-<p>event works!</p>
+<mat-card class="example-card">
+  <mat-card-title>{{ title }}</mat-card-title>
+  <mat-card-subtitle>{{ organizer }}</mat-card-subtitle>
+  <mat-card-content>
+    <p>{{ description | limitStringLength: 100 }} ...</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button [routerLink]="[id]">Details</button>
+  </mat-card-actions>
+</mat-card>
