--- a/client/src/app/event-details/event-details.component.html
+++ b/client/src/app/event-details/event-details.component.html
@@ -1,12 +1,13 @@
-<h2 mat-dialog-title>{{ title }}</h2>
+<h2 mat-dialog-title>Event Details</h2>
 
-<mat-dialog-content [formGroup]="form">
-  <mat-form-field>
-    <input matInput placeholder="Event Title" formControlName="title" />
+<div mat-dialog-content>
+  <mat-form-field appearance="fill">
+    <mat-label>Event title</mat-label>
+    <input matInput [(ngModel)]="title" />
   </mat-form-field>
-</mat-dialog-content>
+</div>
 
-<mat-dialog-actions>
-  <button class="mat-raised-button" (click)="close()">Close</button>
-  <button class="mat-raised-button mat-primary" (click)="save()">Save</button>
-</mat-dialog-actions>
+<div mat-dialog-actions>
+  <button mat-raised-button mat-dialog-close>Close</button>
+  <button mat-raised-button color="primary">Save</button>
+</div>
