feat: rename location to address and change it to string and update the data upon saving the form

--- a/client/src/app/events/events.component.html
+++ b/client/src/app/events/events.component.html
@@ -8,7 +8,7 @@
     [title]="event.title"
     [description]="event.description"
     [organizer]="event.organizer"
-    [location]="event.location"
+    [address]="event.address"
     [date]="event.date"
   ></app-event>
 </div>
