--- a/client/src/app/event-details/event-details.component.html
+++ b/client/src/app/event-details/event-details.component.html
@@ -21,6 +21,10 @@
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Address</mat-label>
+      <input matInput formControlName="address" />
+    </mat-form-field>
   </form>
 </div>
 
