--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div fxLayout="column" fxLayoutAlign="center center" class="app-home-container">
+  <h1>Welcome</h1>
+  <h2>to my data manipulation app</h2>
+</div>
