--- a/client/src/app/event-details/event-details.component.html
+++ b/client/src/app/event-details/event-details.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Event Details</h2>
+<h2 mat-dialog-title>{{ dialogTitle }}</h2>
 
 <div mat-dialog-content>
   <form [formGroup]="form" fxLayout="column" fxLayoutGap="1%">
