test: fix already existing tests

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div fxLayout="column" fxLayoutAlign="center center" class="app-home-container">
   <h1>Welcome</h1>
-  <h2>to my data manipulation app</h2>
+  <h2>to my event administration app</h2>
 </div>
